parte de pesquisa praticamente pronta

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             	<a href="http://www.ginane.com.br" target="_blank" id="logo"><img src="img/logo-menu-ginane.png" width="99" height="61" alt="Grupo Ginane"/></a>
                 <a href="#apresentacao" class="dl menu" title="Device Lab">deviceLab</a>
                 <a href="#projetos" class="lp menu" title="Lab Projescts">Lab Projects</a>
+                <a href="#pesquisas" class="pesq menu" title="Pesquisas">Pesquisas</a>
+                <a href="#na-midia" class="mid menu" title="Na mídia">Na mídia</a>
                 <a href="#fale-conosco" class="fc menu" title="Fale conosco">Contato</a>
             </div>
         </div>
@@ -102,6 +104,36 @@
             </div>
         </div>
 
+        <div id="pesquisas">
+            <div class="wrap">
+                <h3><span>Pesquisas</span></h3>
+            </div>
+            <div class="content">
+                <div class="wrap">
+                    <img src="img/ico-pesquisas.jpg" height="119" width="124">
+                    <div class="info">
+                        <span class="chapeu">Infográfico</span>
+                        <h4>
+                            <span class="titulo">M-Commerce</span><br>
+                            <span class="descricao">Experiência de compra com Smartphones e Tablets no Brasil</span>
+                        </h4>
+                        <span class="data">01.06.2013</span>   
+                    </div>
+                    <a href="#" class="download">Download</a>
+                    <p class="info-download">*Divulgue o estudo na sua timeline do Facebook ou Twitter para liberar o download</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="na-midia">
+            <div class="wrap">
+                <h3><span>Na mídia</span></h3>
+            </div>
+            <div class="content">
+                <div class="wrap"></div>
+            </div>
+        </div>
+
         <div id="fale-conosco">
         	<div class="wrap">
             	<h3><span>Fale conosco</span></h3>
@@ -135,6 +167,8 @@
             	<a href="#topo" id="logo2"><img src="img/logo-menu-devicelab.png" width="161" height="30" alt="Device Lab"/></a>
                 <a href="#apresentacao" class="dl menu" title="Device Lab">deviceLab</a>
                 <a href="#projetos" class="lp menu" title="Lab Projescts">Lab Projects</a>
+                <a href="#pesquisas" class="pesq menu" title="Pesquisas">Pesquisas</a>
+                <a href="#na-midia" class="mid menu" title="Na mídia">Na mídia</a>
                 <a href="#fale-conosco" class="fc menu" title="Fale conosco">Contato</a>
             </div>
         </div>
