--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </h4>
                         <span class="data">01.06.2013</span>   
                     </div>
-                    <a href="#" class="download">Download</a>
+                    <a href="https://www.paywithatweet.com/pay/?id=8996ef1461c62d57d735a3d06f1723eb" class="download">Download</a>
                     <p class="info-download">*Divulgue o estudo na sua timeline do Facebook ou Twitter para liberar o download</p>
                 </div>
             </div>
@@ -155,7 +155,7 @@
                         <img src="img/na-midia/idg-now.png" height="160" width="200" alt="IDG NOW!">
                         <div class="info">
                             <span class="chapeu">IDG NOW!</span>
-                            <h4><a href="#">Smartphones ou tablets: como seus clientes veem sua empresa nas novas janelas?</a></h4>
+                            <h4><a href="http://goo.gl/J9J0k">Smartphones ou tablets: como seus clientes veem sua empresa nas novas janelas?</a></h4>
                             <span class="data">22.05.2013</span>   
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                         <img src="img/na-midia/estadao.png" height="160" width="200" alt="Estadão">
                         <div class="info">
                             <span class="chapeu">Estadão</span>
-                            <h4><a href="#">Site adaptado para celular não é luxo, é obrigação</a></h4>
+                            <h4><a href="http://goo.gl/bDD0k">Site adaptado para celular não é luxo, é obrigação</a></h4>
                             <span class="data">22.04.2013</span>   
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                         <img src="img/na-midia/folha-sp.png" height="160" width="200" alt="Folha de São Paulo">
                         <div class="info">
                             <span class="chapeu">Folha de São Paulo</span>
-                            <h4><a href="#">Empresários mostram como criar negócios com pouquíssimo dinheiro</a></h4>
+                            <h4><a href="http://goo.gl/Qp8Uw">Empresários mostram como criar negócios com pouquíssimo dinheiro</a></h4>
                             <span class="data">31.03.2013</span>   
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                         <img src="img/na-midia/mobile-time.png" height="160" width="200" alt="Mobile time">
                         <div class="info">
                             <span class="chapeu">Mobile Time</span>
-                            <h4><a href="#">Laboratório de testes para apps chega ao mercado e projeta faturamento de R$ 2 milhões</a></h4>
+                            <h4><a href="http://goo.gl/8SjYX">Laboratório de testes para apps chega ao mercado e projeta faturamento de R$ 2 milhões</a></h4>
                             <span class="data">01.03.2013</span>   
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                         <img src="img/na-midia/o-globo.png" height="160" width="200" alt="O Globo">
                         <div class="info">
                             <span class="chapeu">O Globo</span>
-                            <h4><a href="#">Smartphones? Tablets? Nada disso: a festa agora é dos ‘phablets’</a></h4>
+                            <h4><a href="http://goo.gl/ZqK34">Smartphones? Tablets? Nada disso: a festa agora é dos ‘phablets’</a></h4>
                             <span class="data">24.02.2013</span>   
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                         <img src="img/na-midia/exame.png" height="160" width="200" alt="Exame">
                         <div class="info">
                             <span class="chapeu">Exame</span>
-                            <h4><a href="#">Startup fatura testando sites e apps em vários aparelhos</a></h4>
+                            <h4><a href="http://goo.gl/T6DFX">Startup fatura testando sites e apps em vários aparelhos</a></h4>
                             <span class="data">22.02.2013</span>   
                         </div>
                     </div>
@@ -224,6 +224,12 @@
                     <img src="img/email.png" width="57" height="57" alt="email"/>
                     <p><a href="mailto:contato@devicelab.com.br">contato@devicelab.com.br</a></p>
                 </div>
+                <a id="facebook" href="https://www.facebook.com/Devicelab">
+                    <img src="img/facebook.png" height="58" width="57"/>
+                </a>
+                <a id="twitter" href="https://twitter.com/deviceLab_br">
+                    <img src="img/twitter.png" height="58" width="57"/>
+                </a>
             </div>           
         </div>
         <!-- CONTATO Fim -->
