ajustando logos do menu

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <div id="menu">
         	<div class="wrap">
                 <a href="http://www.ginane.com.br" target="_blank" id="logo">
-                    <img src="../img/logo-menu-ginane.png" width="99" height="61" alt="Grupo Ginane"/>
+                    <img src="img/logo-menu-ginane.png" width="99" height="61" alt="Grupo Ginane"/>
                 </a>
                 <a href="#topo" id="logo2">
-                    <img src="../img/logo-menu-devicelab.png" width="161" height="30" alt="Device Lab">
+                    <img src="img/logo-menu-devicelab.png" width="161" height="30" alt="Device Lab">
                 </a>
                 <a href="#apresentacao" class="dl menu" title="Device Lab">deviceLab</a>
                 <a href="#projetos" class="lp menu" title="Lab Projescts">Lab Projects</a>
