ajustes na versão em inglês

--- a/eng/index.html
+++ b/eng/index.html
@@ -66,7 +66,7 @@
         <div class="wrap">
                 <div id="col-esquerda">
                 <p>An optimal online user experience is the result of testing in the gamut of personal computing and mobile devices.</p>
-                    <p class="destaque">Trust your tests.</p>
+                    <p class="destaque">We trust in real tests.</p>
                 </div>
                 <div class="col-direita">
                 <p>Complexities hinder adherence and conversion rates for online businesses. DeviceLab helps to make every interaction more relevant, and accomplishes this in a controlled environment throughly and swiftly.</p>
@@ -197,12 +197,12 @@
                     <div class="info">
                         <span class="chapeu">Infografic</span>
                         <h4>
-                            <span class="titulo">M-Commerce</span><br>
-                            <span class="descricao">Smartphone and tablet usability in Brazil.</span>
+                            <span class="titulo">M-Commerce in Brazil</span><br>
+                            <span class="descricao">An user experience study.</span>
                         </h4>
                         <span class="data">01.06.2013</span>  
                     </div>
-                    <a href="http://goo.gl/N74dC" class="download" target="_blank">Download</a>
+                    <a href="http://goo.gl/m0iE2" class="download" target="_blank">Download</a>
                 </div>
             </div>
         </div>
