video com legenda e destaque específico para cada língua

--- a/eng/index.html
+++ b/eng/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>deviceLab - Trust Real Testing.</title>
+        <title>deviceLab - We trust in real tests</title>
         <meta name="description" content="">
 
         <link rel="stylesheet" href="../css/normalize.css">
@@ -33,7 +33,7 @@
             </div>
         </div>
 
-        <div id="foto-topo">
+        <div id="foto-topo" class="eng">
         <div class="wrap">
             <a href="#" id="mostra-video" title="Veja nosso vídeo">
                 <span></span>
