inclusão de 3 novos projetos

--- a/eng/index.html
+++ b/eng/index.html
@@ -175,15 +175,82 @@
                     </div>               
                 </div>
 
-                <ul id="nav">
-                    <li id="lp1" class="active"><a href="#folha-dirigida">Folha dirigida</a></li>
-                    <li id="lp2"><a href="#jwt">JWT</a></li>
-                    <li id="lp3"><a href="#webmotors">WebMotors</a></li>
-                </ul>
+                <div id="travessa" class="conteudo">   
+                    <div class="col">
+                        <img src="../img/projetos/travessa-cor.png" height="28" width="200" alt="Livraria da Travessa"/>
+                    </div>
+                    <div class="col">
+                        <p>A <strong>Livraria Travessa</strong>, uma das principais do Rio de Janeiro, queria oferecer uma experiência diferente para clientes que desejavam comprar utilizando o smartphone.</p>
+                    </div>
+                    <div class="col">
+                        <p>A deviceLab <strong>avaliou o novo site móvel</strong> em diferentes aparelhos, sistemas operacionais e tamanhos de tela e recomendou melhorias do ponto de vista de performance, compatibilidade e usabilidade. </p>                 
+                    </div>               
+                    <div class="col">
+                        <p>Os resultados estão superando as maiores expectativas.</p>                 
+                    </div>               
+                </div>
+
+                <div id="oglobo" class="conteudo">   
+                    <div class="col">
+                        <img src="../img/projetos/oglobo-cor.png" height="108" width="200" alt="O Globo"/>
+                    </div>
+                    <div class="col">
+                        <p>O <strong>Jornal O Globo</strong> lançou o <strong>VaiRio, aplicativo de trânsito</strong> que ajuda as pessoas a não perderem tempo nos trajetos na cidade, o que representou novos desafios para a equipe da <strong>Infoglobo</strong>.</p>
+                    </div>
+                    <div class="col">
+                        <p>A deviceLab foi consultada para assegurar que o app funcionaria corretamente na maioria dos devices e sistemas operacionais existentes atualmente.
+<strong>A deviceLab ofereceu o laboratório de testes para a equipe técnica do Globo</strong>.</p>                 
+                    </div>               
+                    <div class="col">
+                        <p>À medida que a equipe da deviceLab encontrava um erro, os profissionais de tecnologia do Globo <strong>resolviam imediatamente 
+em cada aparelho</strong> e sistema operacional.</p>                 
+                    </div>               
+                </div>
+
+                <div id="globosat" class="conteudo">   
+                    <div class="col">
+                        <img src="../img/projetos/globosat-cor.png" height="30" width="200" alt="Globosat"/>
+                    </div>
+                    <div class="col">
+                        <p>A <strong>Globosat</strong> é a maior programadora da América Latina e possui canais como Telecine, GNT, Multishow, entre outros. </p>
+                    </div>
+                    <div class="col">
+                        <p>Atualmente uma iniciativa importante da empresa é o desenvolvimento de aplicativos móveis que ofereçam uma <strong>experiência diferenciada</strong> e complementar para seus clientes. Porém, entender como é a experiência de uso de diferentes apps em smartphones e tablets é um desafio para qualquer empresa.</p>                 
+                    </div>               
+                    <div class="col">
+                        <p>Para contribuir com a visão dos gestores e otimizar o processo de desenvolvimento da Globosat, a deviceLab foi <strong>convidada a avaliar o funcionamento desses apps</strong> em diferentes situações de uso e recomendar as atualizações necessárias do ponto de vista de usabilidade, performance e compatibilidade. </p>                 
+                    </div>               
+                </div>
 
             </div>
         </div>
         <!-- PROJETOS Fim -->
+
+
+        <!-- PROJETOS NAV Início -->
+        <div class="projetos-nav">
+            <div class="wrap">
+                <ul class="nav">
+                    <li id="lp1" class="active"><a href="#folha-dirigida">Folha dirigida</a></li>
+                    <li id="lp2"><a href="#jwt">JWT</a></li>
+                    <li id="lp3"><a href="#webmotors">WebMotors</a></li>
+                    <li id="lp4"><a href="#travessa">Livraria da Travessa</a></li>
+                </ul>
+           </div>
+        </div>
+        <!-- PROJETOS NAV Fim -->
+
+                
+        <!-- PROJETOS NAV Início -->
+        <div class="projetos-nav">
+            <div class="wrap">
+                <ul class="nav">
+                    <li id="lp5"><a href="#oglobo">O Globo</a></li>
+                    <li id="lp6"><a href="#globosat">Globosat</a></li>
+                </ul>
+            </div>
+        </div>
+        <!-- PROJETOS NAV Fim -->
 
 
         <!-- PESQUISAS Início -->
